--- a/raincoat-fabric/src/main/resources/assets/raincoat/lang/en_us.json
+++ b/raincoat-fabric/src/main/resources/assets/raincoat/lang/en_us.json
@@ -1,7 +1,7 @@
 {
-  "key.categories.raincoat": "Raincoat (Rainboots Client)",
+  "key.categories.raincoat": "Rainboots Client",
   "key.raincoat.reload": "Reload",
-  "raincoat.options.title": "Raincoat Options",
+  "raincoat.options.title": "Rainboots Options",
   "raincoat.options.ads_relative_sensitivity": "ADS Relative Sensitivity",
   "raincoat.options.2x_zoom_relative_sensitivity": "2x Zoom Relative Sensitivity",
   "raincoat.options.4x_zoom_relative_sensitivity": "4x Zoom Relative Sensitivity",
