--- a/raincoat-fabric/src/main/resources/assets/raincoat/lang/en_us.json
+++ b/raincoat-fabric/src/main/resources/assets/raincoat/lang/en_us.json
@@ -6,6 +6,7 @@
   "raincoat.options.2x_zoom_relative_sensitivity": "2x Zoom Relative Sensitivity",
   "raincoat.options.4x_zoom_relative_sensitivity": "4x Zoom Relative Sensitivity",
   "raincoat.options.ads": "ADS",
+  "raincoat.options.invert_attack_key": "Invert Attack Key",
   "raincoat.options.key.toggle": "Toggle",
   "raincoat.options.key.hold": "Hold"
 }
