--- a/raincoat-fabric/src/main/resources/assets/raincoat/lang/ja_jp.json
+++ b/raincoat-fabric/src/main/resources/assets/raincoat/lang/ja_jp.json
@@ -6,6 +6,7 @@
   "raincoat.options.2x_zoom_relative_sensitivity": "2倍ズーム時の相対マウス感度",
   "raincoat.options.4x_zoom_relative_sensitivity": "4倍ズーム時の相対マウス感度",
   "raincoat.options.ads": "ADS",
+  "raincoat.options.invert_attack_key": "攻撃キーを反転",
   "raincoat.options.key.toggle": "切り替え",
   "raincoat.options.key.hold": "長押し"
 }
