--- a/raincoat-fabric/src/main/resources/assets/raincoat/lang/en_us.json
+++ b/raincoat-fabric/src/main/resources/assets/raincoat/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "key.categories.raincoat": "Rainboots Client",
   "key.raincoat.reload": "Reload",
+  "raincoat.updater.close_game": "Exit Minecraft",
   "raincoat.options.title": "Rainboots Options",
   "raincoat.options.ads_relative_sensitivity": "ADS Relative Sensitivity",
   "raincoat.options.2x_zoom_relative_sensitivity": "2x Zoom Relative Sensitivity",
